<resources>
    <string name="app_name">Flag Quiz</string>
    <string name="choices">Select Number of Choices</string>
    <string name="correct">correct</string>

    <string name="guess_country">Guess the Country</string>
    <string name="guesses">guesses</string>
    <string name="incorrect_answer">❌Incorrect!</string>
    <string name="more_regions_title">More Regions Required</string>
    <string name="more_region_message">There are not enough countries in
        the selected regions. Please select more regions.</string>
    <string name="of">of </string>
    <string name="ok">OK</string>
    <string name="selectcontinent">Select a Continent</string>
    <string name="question">Question</string>
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="regions">Select Regions</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="question_of_total">Question %1$d of %2$d</string>
    <string name="back_desc">Back</string>
    <string name="choose_region">Choose a region:</string>
    <string name="content_description">Flag Quiz Logo</string>
    <string name="flag_quiz">FLAG QUIZ</string>
    <string name="subtitle">Learn Every Flag Offline</string>
    <string name="countries">Countries</string>
    <string name="countries_available">Countries Available</string>
    <string name="countries_available_description">195 Flags • 6 Continents • Offline</string>
    <string name="play_now">PLAY NOW</string>
    <string name="game_play">Gameplay</string>
    <string name="Sound_Effects">Sound Effects</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data">Data</string>
    <string name="reset">Reset Statistics</string>
    <string name="AppearanceandSound">Appearance &amp; Sound</string>
    <string name="five_question">5 Questions</string>
    <string name="ten_question">10 Questions</string>
    <string name="timedQuestion">Timed Questions</string>
    <string name="question_per_quiz">Questions per Quiz</string>
    <string name="start_quiz">▶  Start Quiz</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="custom_quiz">Custom Quiz</string>
    <string name="statistics">Statistics</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="text_version">Version 1.0</string>
    <string name="app_logo">App Logo</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="oceania">Oceania</string>
    <string name="flags">Flags</string>
    <string name="nostatyet">No stats yet</string>
    <string name="zeropercent">0%</string>
    <string name="overallaccuracy">Overall Accuracy</string>
    <string name="quizzes">Quizzes</string>
    <string name="zero">0</string>
    <string name="refresh">Refresh</string>
    <string name="flag">Flag</string>
    <string name="playagain">Play Again</string>
    <string name="exittohome">Exit to Home</string>
    <string name="worldcountries">World Countries</string>
    <string name="incorrect">Incorrect</string>
    <string name="avgscore">Avg Score</string>
    <string name="byregion">By Region</string>
    <string name="streak">Streak</string>
    <string name="quizcomplete">Quiz Complete</string>
    <string name="nicelydone">Nicely done</string>
    <string name="zeroverzero">0/0</string>
    <string name="choose">Choose a region to focus your quiz on its flags</string>
    <string name="recentactivity">Recent Activity</string>
    <string name="playfirstquiz">Play your first quiz and your progress will show up here.</string>
    <string-array name="regionList">


        <item>
            africa
        </item>
        <item>asia</item>
        <item>europe</item>
        <item>north_america</item>
        <item>oceania</item>
        <item>south_america</item>
    </string-array>
    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>
</resources>