<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Top Bar: Back + World Flags + Refresh -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_desc"
            android:src="@drawable/backa"
            app:tint="@color/text_color"
             />
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:text="@string/worldcountries"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/refreshButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh_"
            app:tint="@color/text_color"
            />




    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionNumberTextView"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/timerFrame"
        android:layout_marginEnd="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/questionNumberTextView"
        app:layout_constraintBottom_toBottomOf="@+id/questionNumberTextView"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timerProgressRing"
            app:indicatorColor="@color/timer_blue"
            app:trackColor="@color/homedivider"
            app:trackThickness="3dp"
            app:indicatorInset="0dp"
            app:indicatorSize="36dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timerCountdownText"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="10sp"
            android:textStyle="bold" />
    </FrameLayout>
    <ImageView
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:id="@+id/flagImageView"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/questionNumberTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guessCountryTextView"
        android:text="@string/guess_country"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/flagImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <GridLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:useDefaultMargins="false"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/guessCountryTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />






</androidx.constraintlayout.widget.ConstraintLayout>